# surf-coach-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_dev_auth_users_shim.py  0002_init_profiles.py  0003_create_sessions.py  0004_create_media.py  0005_create_reviews.py  0006_nullable_scores.py  05c9449a6d9d_init_profiles.py
app/: main.py
app/api/: ai.py  auth.py  media.py  reviews.py  sessions.py
app/core/: config.py  db.py  deps.py  errors.py  frame_extractor.py  storage.py
app/core/security/: jwt.py
app/models/: __init__.py  media.py  profile.py  review.py  session.py
app/repositories/: ai.py  auth.py  media.py  sessions.py
app/schemas/: auth.py  media.py  reviews.py  sessions.py
app/services/: ai.py  auth.py  media.py  sessions.py
docs/: # PRD — Surf Coaching Platform (Lean MVP.md  # PRD — Surf Coaching Platform (User Sto.md  SPEC_PHASE_1_Backend.md  SPEC_PHASE_2_Backend.md  surf-coach-phase1.postman_collection.json  surf-coach-phase2.postman_collection.json
tests/: conftest.py  fake_deps.py  test_jwt.py  test_me_endpoints.py  test_media_upload.py  test_reviews.py  test_sessions.py
